MDEV-28739 Trying to lock uninitialized mutex or hang upon shutdown after using Spider with query_cache